--- a/index.css
+++ b/index.css
@@ -1,1 +1,5 @@
 .saw{color:aquamarine;}
+a {color: black; font-style: italic; text-decoration: none;}
+            ol{margin-left: -20px;}
+             h1{text-align: center; font-size:70px; margin-top: -10px;}
+            h2{text-align: center; font-size: 25px;}
