--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
-.saw{color:aquamarine;}
+.saw{color: darkgrey;}
 a {color: black; font-style: italic; text-decoration: none;}
-            ol{margin-left: -20px;}
-             h1{text-align: center; font-size:70px; margin-top: -10px;}
-            h2{text-align: center; font-size: 25px;}
+ol{margin-left: -20px;}
+h1{text-align: center; font-size:70px; margin-top: -10px;}
+h2{text-align: center; font-size: 25px;}
+.title{text-align: center; font-size:70px; margin-top: -10px;}
