--- a/index.css
+++ b/index.css
@@ -5,14 +5,16 @@ h2{text-align: center; font-size: 25px;}
  .title{text-align: center; font-size:70px; margin-top: -10px;} 
 ol{
     border-right:1px solid grey;
-    width: 95px;
+    width: 150px;
     padding-bottom: 15px;
     padding-top: 15px;
     margin-left: -20px;
     margin-top: 10px;
+    font-size: 25px;
 }
 .indexh3{text-align: center; font-size: 17px; 
 margin-bottom: 0px;
 }
-#textmyworkplace{text-align: center;}
-
+#textmyworkplace{text-align: center; font-size: 25px;}
+.introlink{font-size: 25px;}
+.introlink2{color: royalblue;}
