--- a/index.css
+++ b/index.css
@@ -3,12 +3,12 @@ a {color: black; font-style: italic; text-decoration: none;}
 h1{text-align: center; font-size:70px; margin:0px; padding-bottom: 10px; border-bottom: 1px solid grey;}
 h2{text-align: center; font-size: 25px;}
  .title{text-align: center; font-size:70px; margin-top: -10px;} 
-ol{
+ul{
     border-right:1px solid grey;
     width: 150px;
     padding-bottom: 15px;
     padding-top: 15px;
-    margin-left: -20px;
+    margin-left: -10px;
     margin-top: 10px;
     font-size: 25px;
 }
